<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ListView
        android:id="@+id/listViewItems"
        android:layout_width="wrap_content"
        android:layout_height="327dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22000003" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/hapus_nilai_tukar"
        app:layout_constraintBottom_toTopOf="@+id/listViewItems"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/gridViewLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:columnCount="4"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewItems">

        <Button
            android:id="@+id/btn7"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/btn8"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/btn9"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/btnDelete"
            android:text="@string/btnDelete" />

        <Button
            android:id="@+id/btn4"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/btn5"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/btn6"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btnPoint"
            android:text="@string/btnPoint" />

        <Button
            android:id="@+id/btn1"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btn2"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btn3"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btn0"
            android:text="@string/btn0" />
    </GridLayout>

    <EditText
        android:id="@+id/editTextAmt"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Jumlah Rupiah"
        android:inputType="numberDecimal"
        android:focusable="false"
        app:layout_constraintBottom_toTopOf="@+id/listViewItems"
        app:layout_constraintEnd_toStartOf="@+id/btnReset"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="71dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="IDR"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/listViewItems"
        app:layout_constraintEnd_toStartOf="@+id/editTextAmt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.090" />

</android.support.constraint.ConstraintLayout>